# claude_code_work

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: doc-reviewer.md  implementation-validator.md
.claude/commands/: add-feature.md  review-docs.md  setup-project.md
.claude/guides/: ddd.md  tdd.md
.claude/skills/architecture-design/: SKILL.md  guide.md  template.md
.claude/skills/check-docs-sync/: SKILL.md
docs/ideas/: initial-requirements.md
tools/dashboard/: pyproject.toml
tools/dashboard/src/project_dashboard/application/usecases/: get_project_status.py
tools/dashboard/src/project_dashboard/domain/: exceptions.py
tools/dashboard/src/project_dashboard/domain/models/: project_status.py
tools/dashboard/src/project_dashboard/domain/repositories/: project_status_repository.py
tools/dashboard/src/project_dashboard/domain/services/: tasklist_parser.py
tools/dashboard/src/project_dashboard/infrastructure/repositories/: filesystem_project_status_repository.py
tools/dashboard/src/project_dashboard/presentation/: cli.py  html_renderer.py
tools/dashboard/tests/integration/: test_generate_dashboard.py
tools/dashboard/tests/unit/application/usecases/: test_get_project_status.py
tools/dashboard/tests/unit/domain/models/: test_project_status.py
tools/dashboard/tests/unit/domain/services/: test_tasklist_parser.py
tools/dashboard/tests/unit/infrastructure/: test_filesystem_repository.py  test_git_parsing.py
tools/dashboard/tests/unit/presentation/: test_cli.py  test_html_renderer.py
(+16 files in other folders)
