[project]
name = "claude-code-work"
version = "0.1.0"
description = "スペック駆動開発テンプレート（DDD × TDD）"
requires-python = ">=3.12"
dependencies = [
    "project-dashboard",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

# アプリ本体（src/ 配下）が実装されるまでは、ルートは配布物を持たない仮想プロジェクトとする。
# TaskCLI 実装時に package = true へ変更し、build-system と src レイアウト設定を追加する。
[tool.uv]
package = false

[tool.uv.workspace]
members = ["tools/dashboard"]

[tool.uv.sources]
project-dashboard = { workspace = true }

[tool.pytest.ini_options]
# アプリ本体のテスト（tests/）を作成したら "tests" を先頭に追加する
testpaths = ["tools/dashboard/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["project_dashboard"]

[tool.ruff.lint.per-file-ignores]
# CSS/HTMLテンプレート文字列は行分割すると可読性が下がるため長行を許容する
"tools/dashboard/src/project_dashboard/presentation/html_renderer.py" = ["E501"]

[tool.coverage.run]
source = ["tools/dashboard/src"]
