[project]
name = "project-dashboard"
version = "0.1.0"
description = "プロジェクト状況ダッシュボード生成ツール（開発支援ツール・アプリ本体とは独立）"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dashboard = "project_dashboard.presentation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_dashboard"]
